--- a/src/Components/searchbarc.css
+++ b/src/Components/searchbarc.css
@@ -26,3 +26,43 @@ padding: 10px;
 .main3{columns: 6 200px;
     column-gap: 10px;
 margin-top: 40px;}
+
+
+min{
+    height: 100vh;
+    width: 100%;
+}
+/* ... Other styles ... */
+
+/* Style for the popup container */
+.popup-media {
+    position: fixed;
+   top: 50%;
+   left: 50%;
+   
+    
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+  }
+  
+  /* Style for the close button (x symbol) */
+  .popup-media span {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 1px;
+  }
+  
+  .popup-media img {
+    display: block; /* Remove any inline spacing */
+    max-width: 100%; /* Limit the image width to the container's width */
+    max-height: 80vh; /* Limit the image height to 80% of the viewport height */
+    margin: 0 auto; /* Center the image horizontally within the container */
+  }
+  /* ... Other styles ... */
+  
