--- a/src/Components/searchbarc.css
+++ b/src/Components/searchbarc.css
@@ -1,73 +1,80 @@
 .one {
-
-border: 1px solid lightblue;
-border-radius: 5px;
-padding: 10px;
+  border: 1px solid lightblue;
+  border-radius: 5px;
+  padding: 10px;
 }
-.two{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 100px;
-
-  
+.two {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
 }
-.main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
 }
-.main2{
-    border-radius: 10px;
-    width: 100%;
-    cursor: pointer;
+.main2 {
+  position: relative;
+  top: -100px;
+  border-radius: 10px;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
 }
-.main3{columns: 6 200px;
-    column-gap: 10px;
-margin-top: 40px;}
-
-
+.main3 {
+  columns: 6 200px;
+  column-gap: 10px;
+  margin-top: 40px;
+}
 
 /* ... Other styles ... */
 
 /* Style for the popup container */
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Dark background color with transparency */
-    z-index: auto; /* Ensure the overlay appears above other content */
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.7
+  ); /* Dark background color with transparency */
+  z-index: 1000; /* Ensure the overlay appears above other content */
+}
 
 .popup-media {
-    position: fixed;
-   top: 50%;
-   left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px;
-   
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 5px;
+  z-index: 1001;
+}
 
-  }
-  
-  /* Style for the close button (x symbol) */
-  .popup-media span {
-    position: absolute;
-   left: 100%; 
-    cursor: pointer;
-    font-size: 30px;
-    color: white;
-  }
-  
-  .popup-media img {
-    display: block; /* Remove any inline spacing */
-    max-width: 100%; /* Limit the image width to the container's width */
-   max-height: 99vh;  /* Limit the image height to 80% of the viewport height */
-    margin: 0 auto; /* Center the image horizontally within the container */
-  }
-  /* ... Other styles ... */
-  
+/* Style for the close button (x symbol) */
+.popup-media span {
+  position: absolute;
+  left: 100%;
+  cursor: pointer;
+  font-size: 30px;
+  color: white;
+}
+
+.popup-media img {
+  display: block; /* Remove any inline spacing */
+  max-width: 100vw; /* Limit the image width to the container's width */
+   max-height: 98vh;
+  margin: 0 auto; /* Center the image horizontally within the container */
+}
+/* ... Other styles ... */
+.likes {
+  margin-top: 50px;
+  color: black;
+  font-family: monospace;
+}
