--- a/src/Components/searchbarc.css
+++ b/src/Components/searchbarc.css
@@ -1,4 +1,3 @@
-
 .overlay {
   position: fixed;
   top: 0;
@@ -14,44 +13,41 @@
   z-index: 1001; /* Ensure the overlay appears above other content */
 }
 
-  .inputf {
-    padding: 10px;
-    border-radius: 20px;
-    border: 1.7px solid rgb(57, 62, 70);
-  }
-  
-  .sendIcon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
-  
-  }
-  .sendIcon path{
-     fill: rgb(57, 62, 70);
-  }
+.inputf {
+  padding: 10px;
+  border-radius: 20px;
+  border: 1.7px solid rgb(57, 62, 70);
+}
 
-  .hidden-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.sendIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sendIcon path {
+  fill: rgb(57, 62, 70);
+}
 
-    background: none;
-    border: none;
-   
-    cursor: pointer;
-    margin-left: -10px;
-    
-  }
-  .three{
-    margin-left: 1vw;
-  }
-.inputForm{
- display: flex;
- gap: 10px;
- align-items: center;
- justify-content: center;
- margin: 100px;
+.hidden-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background: none;
+  border: none;
+
+  cursor: pointer;
+  margin-left: -10px;
+}
+.three {
+  margin-left: 1vw;
+}
+.inputForm {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  margin: 100px;
 }
 .main {
   display: flex;
@@ -60,23 +56,19 @@
   margin: 10px;
 }
 .main2 {
- 
-  
   border-radius: 10px;
   width: 100%;
   cursor: pointer;
- 
 }
 .main3 {
   columns: 6 200px;
-  column-gap: 10px;
-  margin-top: 40px;
+  column-gap: 5px;
+  margin: 5vw;
 }
 
 /* ... Other styles ... */
 
 /* Style for the popup container */
-
 
 .popup-media {
   position: fixed;
@@ -84,10 +76,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.7);
- margin-top: -2vh;
- padding: 5px;
-
- 
+  margin-top: -2vh;
+  padding: 5px;
   z-index: 1001;
 }
 
@@ -103,7 +93,7 @@
 .popup-media img {
   display: block; /* Remove any inline spacing */
   max-width: 100vw; /* Limit the image width to the container's width */
-   max-height: 100vh;
+  max-height: 100vh;
   margin: 0 auto; /* Center the image horizontally within the container */
 }
 /* ... Other styles ... */
@@ -112,12 +102,12 @@
   color: black;
   font-family: monospace;
 }
-.like{
+.like {
   margin: 5vh;
 }
 .blur-up {
   filter: blur(10px);
-  
+
   transition: filter 0.3s, transform 0.3s;
 }
 
@@ -126,6 +116,42 @@
   filter: blur(0);
   transform: scale(1);
 }
-.likedimg{
+.likedimg {
   display: flex;
+}
+
+.headerr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 6vh;
+  color: #eeeeee;
+  border-radius: 5px;
+  font-family: monospace;
+  font-weight: 600;
+  background-color: rgb(34, 40, 49);
+  margin-bottom: 20px;
+}
+.img-wrapper{
+  position: relative;
+  display: inline-block;
+}
+.like-button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 8px 16px;
+  background-color: rgb(34, 40, 49);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.main:hover .like-button{
+  opacity: 1;
+  
+
 }
