--- a/src/sp.css
+++ b/src/sp.css
@@ -2,7 +2,8 @@
     cursor: pointer;
         display: flex;
         align-items: center;
-     justify-content: space-evenly;
+     justify-content: space-between;
+     
         width: 100%;
         height: 6vh;
         color: #eeeeee;
@@ -13,6 +14,13 @@
         margin-bottom: 20px;
    
 }
+.relevant{
+    margin-left: 10vh;
+}
+.latest{
+    margin-right: 10vh;
+}
+
 .dropdown-menu {
     display: none;
     position: absolute;
@@ -37,7 +45,7 @@
     margin-bottom: -5px;  
 }
 .btSP{
-background-color: rgb(34, 40, 49);
+
 border: none;
 cursor: pointer;
 
@@ -46,3 +54,14 @@ cursor: pointer;
     fill: #eeeeee;
 }
 
+.prev{
+    margin-left: 10vh;
+  cursor: pointer;
+  
+
+}
+.next{
+    margin-right: 10vh;
+    cursor: pointer;
+    
+}
